--- a/Stylesheets/default.qss
+++ b/Stylesheets/default.qss
@@ -1,16 +1,3 @@
-/* Common depths
- * Base backgroud:   #ff1e1e1e
- * Paper background: #ff1e1e1e
- * 5%   : #0cffffff
- * 7%   : #11ffffff
- * 10%  : #19ffffff
- * 13%  : #21ffffff
- * 16%  : #28ffffff
- * 20%  : #33ffffff
- * 24%  : #3dffffff
- * 28%  : #49ffffff
- */
-
 /* Menu bar and items */
 QMenuBar 
 {    
@@ -40,7 +27,7 @@ QMenuBar::item:selected
     padding-right: 8px;
     padding-top: 4px;
     padding-bottom: 4px;
-    border: 0px solid #E1E1E1;
+    border: 0px solid @baseBackground;
     background: #23FFFFFF;
     color: #E0E0E0;
 }
@@ -51,14 +38,14 @@ QMenu
     padding-right: 8px;
     padding-top: 6px;
     padding-bottom: 6px;
-    border: 0px solid #E1E1E1;
+    border: 0px solid @baseBackground;
     background: #23FFFFFF;
     color: #E0E0E0;
 }
 
 /* Scroll Bars */
 QScrollBar {
-    background: #ff1e1e1e;
+    background: @baseBackground;
     border-radius: 0px;
 }
 
@@ -107,5 +94,13 @@ QsciScintilla
 {
     padding-top: 10px;
     border: 0px solid #000000;
-    background: #ff1e1e1e;
+    background: @baseBackground;
 }
+
+QWidget[objectName^="baseM1"]
+{
+    margin: 0px;
+    border: 0px solid #000000;
+    background: @baseM1Background;
+}
+
