--- a/Stylesheets/default.qss
+++ b/Stylesheets/default.qss
@@ -1,27 +1,5 @@
 /*
  *
- * SearchDialog
- *
- */
- /*
-QSearchDialog {
-    border: 0px solid #0000000;
-    background: @DialogBackground;
-}
-
-QSearchDialog::separator {
-    width: 30px;
-    height: 30px;
-    margin: 30px;
-}
-
-QSearchDialog QToolButton {
-    color: @ToolbarBackground;
-}*/
-
-
-/*
- *
  * Menu bar and items
  *
  */
@@ -51,7 +29,7 @@ QMenuBar::item:selected
 {    
     padding-top: 4px;
     padding-bottom: 4px;
-    border: 0px solid @MenuBorder;
+    border: 1px solid @MenuBorder;
     background: @MenuHighlighted;
 }
 
@@ -61,17 +39,29 @@ QMenu
     padding-right: 8px;
     padding-top: 6px;
     padding-bottom: 6px;
-    border: 0px solid transparent;
+    border: 1px solid transparent;
     background: @MenuOpened;
     color: @ActiveTextColor;
 }
 
 QMenu:selected
-{
-    border: 2px solid @MenuBorder;
+{    
     background: @MenuHighlighted;
 }
 
+QMenu::item 
+{
+    border: 1px solid transparent; /* 1px border with silver color */    
+    padding: 2px 5px;
+}
+
+QMenu::item:selected 
+{
+    /* Selected item properties */
+    border: 1px solid @MenuBorder; /* 1px border with silver color */
+    background: @MenuHighlighted;
+    padding: 2px 5px;
+}
 
 /*
  *
@@ -185,6 +175,8 @@ QsciScintilla
  *
  */
 
+ /*
+
 QChromeTabItem > QLabel
 {
     margin-left: 10px;
@@ -238,33 +230,28 @@ QChromeTabItem > QPushButton:hover:pressed
     background: black;
     color: white; // The 'X' icon will be set to white.
 }
+*/
 
 /*
  * QSearchPopup
  */
-QSearchPopup
-{
-    background-color: black;
-    color: blue;
+ 
+ QSearchPopup {
+    background-color: @DialogBackground;
+    color: @DialogBackground;
 }
 
-QSearchPopup QPushButton
-{
+QSearchPopup QPushButton {
     margin-left: 10px;
-    border: 0px solid #000000;
-    background: transparent;
-    background: @level0;
-    color: white: // Color here will be applied to the SVG icon
+    border: 2px solid transparent;
+    background-color: transparent;
 }
 
-QSearchPopup QPushButton:hover:!pressed
-{
-    background: white;
-    color: black; // The 'X' icon will be set to black.
+QSearchPopup QPushButton:hover:!pressed {
+    background-color: @ButtonHoverColor;    
 }
 
-QSearchPopup QPushButton:hover:pressed
-{
-    background: black;
-    color: white; // The 'X' icon will be set to white.
+QSearchPopup QPushButton:hover:pressed {
+    background-color: @ButtonHoverColor;    
+    border: 2px solid @level6;
 }
