--- a/Stylesheets/default.qss
+++ b/Stylesheets/default.qss
@@ -235,34 +235,34 @@ QsciScintilla
  *
  */
 
- /*
-
 QChromeTabItem QLabel
 {
     margin-left: 10px;
     border: 0px solid #000000;
-    background: transparent;
+    background-color: transparent;
     font-family: Calibri;
     font-size: 10px;
 }
 
+
 QChromeTabItem
-{
+{   
     margin: 0px;
     border: 0px solid transparent;
-    background: @level0;
+    background-color: @level0;
 }
 
 QChromeTabItem[IsActiveTab="true"]
-{
+{    
     margin: 0px;
-    border: 3px solid @activePurple;
-    background: @level1;
+    border: 3px solid @PurpleRibbon;
+    background-color: @level1;
 }
+
 
 QChromeTabItem[IsHighlighted="true"]
 {
-    background: @level2;
+    background-color: @level2;
 }
 
 QChromeTabItem[IsActiveTab="true"] QLabel
@@ -273,24 +273,24 @@ QChromeTabItem[IsActiveTab="true"] QLabel
 QChromeTabItem QPushButton
 {
     margin-left: 10px;
-    border: 0px solid #000000;
-    background: transparent;
-    background: @level0;
-    color: white: // Color here will be applied to the SVG icon
+    border: 0px solid #000000;    
+    background-color: @level0;
+    color: white;
 }
 
 QChromeTabItem QPushButton:hover:!pressed
 {
-    background: white;
-    color: black; // The 'X' icon will be set to black.
+    background-color: white;
+    color: black; 
 }
+
 
 QChromeTabItem QPushButton:hover:pressed
 {
-    background: black;
-    color: white; // The 'X' icon will be set to white.
+    background-color: black;
+    color: white; 
 }
-*/
+
 
 /*
  * QSearchPopup
