--- a/Stylesheets/default.qss
+++ b/Stylesheets/default.qss
@@ -377,4 +377,75 @@ QSearchPopup[HasFocus="false"] {
 }
 
 
+/*
+ * QListView
+ */
+QTreeView {
+    background-color: @paperBackground; /* General background color */
+    alternate-background-color: #ff4e4e4e; /* Alternate row color */
+    color: #ffd0d0d0; /* Default text (foreground) color */
+    border: 1px solid #444444; /* Optional border around the QTreeView */
+}
 
+QTreeView::header {
+    background-color: @paperBackground; /* Header background color */
+    color: #d0d0d0; /* Header text color */
+    min-height: 10px; /* Set minimum header height */
+    padding: 2px; /* Adjust padding if necessary */
+    font-size: 12px; /* You can also reduce the font size to make it smaller */
+}
+
+QHeaderView::section {
+    background-color: @paperBackground; /* Section background color */
+    color: #d0d0d0; /* Section text color */
+    padding: 4px; /* Adjust padding as needed */
+    height: 10px; /* Force the height of each section */
+    border: 1px solid #444444; /* Optional border for each section */
+}
+
+QTreeView::branch {
+    background-color: @paperBackground;
+}
+
+QTreeView::item {
+    background-color: @paperBackground; /* Default item background */
+    color: #ffd0d0d0; /* Item text color */
+    border: none;
+    padding: 5px;
+    height: 10px;
+}
+
+QTreeView::item:alternate {
+    background-color: #ff3e3e3e; /* Alternate row color */
+}
+
+QTreeView::item:hover {
+    background-color: #ff3a3a3a; /* Darker hover effect */
+    color: #d0d0d0; /* Keep text color the same on hover */
+}
+
+QTreeView::item:selected {
+    background-color: #ff797979; /* Selected item background */
+    color: #e0e0e0; /* Selected item text color */
+}
+
+QTreeView::item:selected:!active {
+    background-color: #ff666666; /* Slightly darker background when unfocused */
+    color: #e0e0e0;
+}
+
+QHeaderView::section {
+    background-color: #ff3a3a3a;
+    color: #ffd0d0d0;
+    padding: 5px;
+    border: 1px solid #ff444444;
+}
+
+QTreeView::verticalScrollBar, QTreeView::horizontalScrollBar {
+    background-color: @paperBackground;
+}
+
+QScrollBar::handle:vertical, QScrollBar::handle:horizontal {
+    background-color: #ff555555;
+    border-radius: 4px;
+}
